--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <!--card two-->
         <div class="border-r-2 border-line-color mt-9 bg-gradient-to-t from-[#FFFF] to-[#F3F3F3]">
             <figure class="px-10 pt-10 flex justify-center">
-            <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+            <img src="images/criminal.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
-            <h2 class="card-title font-extrabold font-garamond">Business Law</h2>
+            <h2 class="card-title font-extrabold font-garamond">Criminal Law</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
                 <img src="images/Frame.png" alt="">
@@ -134,10 +134,10 @@
         <!--card three-->
         <div class="mt-9">
             <figure class="px-10 pt-10 flex justify-center">
-            <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+            <img src="images/child.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
-            <h2 class="card-title font-extrabold font-garamond">Business Law</h2>
+            <h2 class="card-title font-extrabold font-garamond">Child Support</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
                 <img src="images/Frame.png" alt="">
@@ -152,10 +152,10 @@
         <!--card one-->
         <div class=" mt-9 ">
             <figure class="px-10 pt-10 flex justify-center">
-              <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
-              <h2 class="card-title font-extrabold font-garamond">Business Law</h2>
+              <h2 class="card-title font-extrabold font-garamond">Divorce Law</h2>
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
               <div class="card-actions">
                 <img src="images/Frame.png" alt="">
@@ -166,10 +166,10 @@
         <!--card two-->
         <div class="card bg-base-100 mt-9 ">
             <figure class="px-10 pt-10 flex justify-center">
-            <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+            <img src="images/education.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
-            <h2 class="card-title font-extrabold font-garamond">Business Law</h2>
+            <h2 class="card-title font-extrabold font-garamond">Education Law</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
               <img src="images/Frame.png" alt="">
@@ -180,10 +180,10 @@
         <!--card three-->
         <div class="card bg-base-100 mt-9">
             <figure class="px-10 pt-10 flex justify-center">
-            <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+            <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
-            <h2 class="card-title font-extrabold font-garamond">Business Law</h2>
+            <h2 class="card-title font-extrabold font-garamond">Tax Law</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <div class="card-actions">
                 <img src="images/Frame.png" alt="">
@@ -202,8 +202,8 @@
         <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="images/banner.png" class="w-full" />
-              <div class="absolute text-white space-y-2">
-                <div class="flex  lg:flex-row justify-center mt-24">
+              <div class="absolute text-white lg:space-y-2">
+                <div class="flex flex-row -mt-1 lg:flex-row justify-center lg:mt-24">
                     <img src="images/a.svg" alt="">
                 </div>
                 <h4>Awlad Hossain</h4>
@@ -218,7 +218,7 @@
             <div id="slide2" class="carousel-item relative w-full">
               <img  src="images/banner.png" class="w-full" />
               <div class="absolute text-white space-y-2">
-                <div class="flex  lg:flex-row justify-center mt-24">
+                <div class="flex flex-row -mt-1  lg:flex-row justify-center lg:mt-24">
                     <img src="images/a.svg" alt="">
                 </div>
                 <h4>Awlad Hossain</h4>
@@ -353,37 +353,40 @@
 
     </section>
     <!--Footer Section-->
-    <section class="mt">
-        <footer class="footer p-10 bg-base-200 text-base-content">
-            <nav>
-              <header class="footer-title">Services</header> 
-              <a class="link link-hover">Branding</a>
-              <a class="link link-hover">Design</a>
-              <a class="link link-hover">Marketing</a>
-              <a class="link link-hover">Advertisement</a>
+    <section class="mt-10 text-white bg-black">
+        <footer class="footer px-14 py-28 text-white bg-black text-base-content gap-5  lg:mx-auto lg:w-[90%]">
+            <nav class="font-garamond text-center">
+              <header class="footer-title"><img src="images/logo2.png" alt=""></header> 
+              <p class="text-left">There are many variations of <br>passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form,<br> by injected humour.</p>
             </nav> 
-            <nav>
-              <header class="footer-title">Company</header> 
-              <a class="link link-hover">About us</a>
-              <a class="link link-hover">Contact</a>
-              <a class="link link-hover">Jobs</a>
-              <a class="link link-hover">Press kit</a>
+            <nav class="font-garamond text-center text-white lg:space-y-1">
+              <header class="font-extrabold text-2xl ">Usefull Link</header> 
+              <a class="link link-hover text-base">Home</a>
+              <a class="link link-hover text-base">About us</a>
+              <a class="link link-hover text-base">Cases</a>
+              <a class="link link-hover text-base">Blog</a>
+              <a class="link link-hover text-base">Contact Us</a>
             </nav> 
-            <nav>
-              <header class="footer-title">Legal</header> 
-              <a class="link link-hover">Terms of use</a>
-              <a class="link link-hover">Privacy policy</a>
-              <a class="link link-hover">Cookie policy</a>
+            <nav class="font-garamond text-center space-y-2">
+              <header class="font-extrabold text-2xl">Contact Now</header> 
+              <a class="link link-hover text-base">555 4th 5t NW, Washington <br>
+                DC 20530, United States</a>
+              <a class="link link-hover text-base">+88 01750 000 000 <br>
+                +88 01750 000 000</a>
+              <a class="link link-hover text-base">info@gmail.com <br>
+                info@gmail.com</a>
             </nav> 
-            <form>
-              <header class="footer-title">Newsletter</header> 
-              <fieldset class="form-control w-80">
+            <form class="space-y-2">
+              <header class=" font-extrabold text-2xl text-center ">Subscribe</header> 
+              <fieldset class="form-control lg:w-80">
                 <label class="label">
-                  <span class="label-text">Enter your email address</span>
+                  <span class="label-text text-base text-white">Subscribe for our latest & Articles. <br> We Won’t Give You Spam Mails</span>
                 </label> 
-                <div class="join">
-                  <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
-                  <button class="btn btn-primary join-item">Subscribe</button>
+                <div class="join ">
+                  <input type="text" placeholder="Email Address" class="lg:w-[300px]  "/> 
+                  <button class="btn bg-[#B68C5A] rounded-lg join-item ">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                    </button>
                 </div>
               </fieldset>
             </form>
